jenkins2-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  name: jenkins2
spec:
  replicas: 1
  selector:
    deploymentconfig: jenkins2
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
    spec:
      containers:
      - image: jenkins2:latest
        imagePullPolicy: Always
        name: jenkins2
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - jenkins2
      from:
        kind: ImageStreamTag
        name: jenkins2:latest
    type: ImageChange
  - type: ConfigChange
status: {}
