jenkins2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  name: jenkins2
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: jenkins2
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
